--- a/gallary.html
+++ b/gallary.html
@@ -502,7 +502,7 @@
         // Define card images and messages
         const cardData = [
             { 
-                frontImage: "pic1.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe1.jpg", 
                 type: "image"
             },
             { 
