--- a/gallary.html
+++ b/gallary.html
@@ -506,7 +506,7 @@
                 type: "image"
             },
             { 
-                frontImage: "pic2.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe2.jpg", 
                 type: "message",
                 message: "You make my heart smile every day! ❤️"
             },
