--- a/gallary.html
+++ b/gallary.html
@@ -511,7 +511,7 @@
                 message: "You make my heart smile every day! ❤️"
             },
             { 
-                frontImage: "pic3.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe3.jpg", 
                 type: "image" 
             },
             { 
