--- a/gallary.html
+++ b/gallary.html
@@ -515,10 +515,9 @@
                 type: "image" 
             },
             { 
-                frontImage: "pic4.jpg", 
-                type: "gif",
-                gifUrl: "/api/placeholder/400/320",
-                caption: "You're my favorite person!"
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe4.jpg", 
+                type: "message",
+                message: "You're my favorite person and I Love You Infinity!<3"
             },
             { 
                 frontImage: "pic5.jpg", 
