--- a/gallary.html
+++ b/gallary.html
@@ -520,7 +520,7 @@
                 message: "You're my favorite person and I Love You Infinity!<3"
             },
             { 
-                frontImage: "pic5.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe5.jpg", 
                 type: "image" 
             },
             { 
