--- a/gallary.html
+++ b/gallary.html
@@ -524,7 +524,7 @@
                 type: "image" 
             },
             { 
-                frontImage: "pic6.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe6.jpg", 
                 type: "message",
                 message: "I love the way your eyes crinkle when you laugh! 😊"
             },
