--- a/gallary.html
+++ b/gallary.html
@@ -529,7 +529,7 @@
                 message: "I love the way your eyes crinkle when you laugh! 😊"
             },
             { 
-                frontImage: "pic7.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe7.jpg", 
                 type: "image" 
             },
             { 
