--- a/gallary.html
+++ b/gallary.html
@@ -533,10 +533,9 @@
                 type: "image" 
             },
             { 
-                frontImage: "pic8.jpg", 
-                type: "gif",
-                gifUrl: "/api/placeholder/400/320",
-                caption: "You're the cutest!"
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe8.jpg", 
+                type: "message",
+                message: "You're the cutest!"
             },
             { 
                 frontImage: "pic9.jpg", 
