--- a/gallary.html
+++ b/gallary.html
@@ -538,7 +538,7 @@
                 message: "You're the cutest!"
             },
             { 
-                frontImage: "pic9.jpg", 
+                frontImage: "https://raw.github.com/sajni2026/Babe/main/babe9.jpg", 
                 type: "message",
                 message: "Every moment with you is a gift I cherish! 💝"
             }
